--- a/cinemaTicket/templates/base.html
+++ b/cinemaTicket/templates/base.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cinema Ticket</title>
 </head>
 <body>
-    <div>id: {{ctx.id}}</div>
-    <div>projection: {{ctx.projection}}</div>
+    {% block content %}
+
+    {% endblock %}
 </body>
 </html>
